--- a/src/components/Search/Search.module.css
+++ b/src/components/Search/Search.module.css
@@ -1,3 +1,23 @@
+.search {
+  display: flex;
+  gap: 20px;
+  margin: 0 0 20px 40px;
+}
+
+.input_field {
+  padding-left: 5px;
+}
+
+.results {
+  display: flex;
+  flex-wrap: wrap;
+  border-top: 1px solid silver;
+}
+
+.loading {
+  margin: 20px 0 0 10px;
+}
+
 button {
   border-radius: 5px;
   border: 1px solid #e1e1e1;
