--- a/src/components/Search/Search.module.css
+++ b/src/components/Search/Search.module.css
@@ -1,7 +1,8 @@
 .search {
   display: flex;
   gap: 20px;
-  margin: 0 0 20px 40px;
+  padding: 10px 0 20px 40px;
+  border-bottom: 1px solid silver;
 }
 
 .input_field {
@@ -11,11 +12,16 @@
 .results {
   display: flex;
   flex-wrap: wrap;
-  border-top: 1px solid silver;
+  flex-direction: column;
+  max-width: 280px;
+  margin: 10px 40px;
+  text-decoration: none;
 }
 
 .loading {
   margin: 20px 0 0 10px;
+  text-decoration: none;
+  color: #fff;
 }
 
 button {
@@ -33,4 +39,8 @@ button {
 button:hover {
   border-color: silver;
   background-color: rgb(165, 175, 221);
+}
+
+a {
+  text-decoration: none;
 }
