--- a/src/components/Download/Download.module.css
+++ b/src/components/Download/Download.module.css
@@ -1,19 +1,3 @@
-.flyout {
-  position: fixed;
-  bottom: 0;
-  right: 5%;
-  padding: 20px;
-  border: 1px solid silver;
-  border-radius: 8px 8px 0 0;
-}
-.info {
-  margin-bottom: 10px;
-}
-.buttons {
-  display: flex;
-  flex-direction: row;
-  gap: 10px;
-}
 .button {
   border-radius: 5px;
   border: 1px solid #e1e1e1;
@@ -23,6 +7,7 @@
   font-family: inherit;
   background-color: #7b87ba;
   cursor: pointer;
+  color: #fff;
   transition: background-color 0.25s;
 }
 
