--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -33,7 +33,7 @@ button {
   font-family: inherit;
   background-color: #7b87ba;
   cursor: pointer;
-  transition: border-color 0.25s;
+  transition: background-color 0.25s;
 }
 
 button:hover {
