--- a/src/components/Pagination/Pagination.module.css
+++ b/src/components/Pagination/Pagination.module.css
@@ -1,3 +1,7 @@
+:root {
+  --text: #fff;
+}
+
 .pagination {
   display: flex;
   flex-direction: row;
@@ -9,6 +13,6 @@
 }
 
 .page_number {
-  color: #fff;
+  color: var(--text);
   padding: 3px 10px;
 }
