--- a/src/components/CharacterCard/CharacterCard.module.css
+++ b/src/components/CharacterCard/CharacterCard.module.css
@@ -1,24 +1,38 @@
-.star_wars_character {
+:root {
+  --character-card-border: gold;
+  --card-back-hover: #2e2525;
+}
+
+.star_wars_character,
+.star_wars_character_light {
   display: flex;
   min-width: 180px;
   padding: 6px 10px;
   margin: 3px 3px;
   object-fit: contain;
   text-decoration: none;
-  border: 1px solid gold;
+  border: 1px solid var(--character-card-border);
   border-radius: 3px;
 
   &:hover {
-    background-color: #2e2525;
+    background-color: var(--card-back-hover);
   }
 
   .name {
-    color: gold;
+    color: var(--character-card-border);
   }
   .link {
     font-weight: 500;
   }
   .checkbox {
-    accent-color: gold;
+    accent-color: var(--character-card-border);
+  }
+}
+.star_wars_character_light {
+  --character-card-border: rgb(129, 29, 29);
+  --card-back-hover: #2e2525;
+
+  &:hover {
+    background-color: #e2e2df;
   }
 }
