--- a/src/components/CharacterDetails/CharacterDetails.module.css
+++ b/src/components/CharacterDetails/CharacterDetails.module.css
@@ -1,38 +1,71 @@
-.character_card {
+:root {
+  --card-border: silver;
+  --buttons-border: #e1e1e1;
+  --text: #fff;
+  --card-back-hover: #2e2525;
+  --card-back: #353535;
+}
+
+.character_card,
+.character_card_light {
   padding: 30px;
-  border: 1px solid silver;
+  border: 1px solid var(--card-border);
   border-radius: 7px;
+  color: var(--text);
+  background-color: var(--card-back);
 
   &:hover {
-    background-color: #2e2525;
+    background-color: var(--card-back-hover);
   }
 }
 
+.loading_card_light,
+.character_card_light {
+  --text: #020202;
+  --card-back: #d4d4d4;
+  --card-back-hover: #e2e2df;
+  --card-border: rgb(112, 97, 10);
+  --buttons-border: #100f47;
+}
+@media screen and (max-width: 700px) {
+  .character_card {
+    border-radius: 0px;
+  }
+}
 @media screen and (min-width: 700px) {
   .character_card,
-  .loading_card {
+  .character_card_light,
+  .loading_card,
+  .loading_card_light {
     position: absolute;
     right: 10%;
     top: 90px;
     padding: 50px;
   }
+  .character_card {
+    border-radius: 7px;
+  }
 }
 
 @media screen and (min-width: 750px) {
   .character_card,
-  .loading_card {
+  .character_card_light,
+  .loading_card,
+  .loading_card_light {
     right: 15%;
   }
 }
 
 @media screen and (min-width: 800px) {
-  .character_card {
+  .character_card,
+  .character_card_light {
     right: 20%;
   }
 }
 
 @media screen and (min-width: 1100px) {
-  .character_card {
+  .character_card,
+  .character_card_light {
     right: 30%;
   }
 }
@@ -52,7 +85,8 @@
   background-color: #b9b9b9;
 }
 
-.loading_card {
+.loading_card,
+.loading_card_light {
   text-decoration: none;
-  color: #fff;
+  color: var(--text);
 }
