--- a/src/components/EmptyResult/EmptyResult.module.css
+++ b/src/components/EmptyResult/EmptyResult.module.css
@@ -1,9 +1,17 @@
-.empty {
+:root {
+  --text: #ffffff;
+}
+.empty,
+.empty_light {
   display: flex;
   flex-direction: column;
   margin-top: 20px;
 }
+.empty div,
+.empty_light div {
+  color: var(--text);
+}
 
-.no_result {
-  color: #fff;
+.empty_light div {
+  --text: #020202;
 }
