--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,13 @@
 :root {
+  --text: #fff;
+
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #353535;
+  color: var(--text);
+}
+
+body {
+  margin: 0;
+  padding: 0;
 }
