--- a/src/components/CharacterDetails/CharacterDetails.module.css
+++ b/src/components/CharacterDetails/CharacterDetails.module.css
@@ -4,6 +4,7 @@
   --text: #fff;
   --card-back-hover: #2e2525;
   --card-back: #353535;
+  --backdrop: #070707;
 }
 
 .character_card,
@@ -13,6 +14,7 @@
   border-radius: 7px;
   color: var(--text);
   background-color: var(--card-back);
+  z-index: 3;
 
   &:hover {
     background-color: var(--card-back-hover);
@@ -27,6 +29,18 @@
   --card-border: rgb(112, 97, 10);
   --buttons-border: #100f47;
 }
+
+.character_card_backdrop {
+  z-index: 2;
+  background-color: var(--backdrop);
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  opacity: 0.5;
+}
+
 @media screen and (max-width: 700px) {
   .character_card {
     border-radius: 0px;
