--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -1,4 +1,5 @@
-main {
+main.light,
+main.dark {
   --border-color: silver;
   --buttons-border: #e1e1e1;
   --text: #fff;
@@ -46,29 +47,4 @@ main.dark {
   margin: 20px 0 0 10px;
   text-decoration: none;
   color: var(--text);
-}
-
-button {
-  border-radius: 5px;
-  border: 1px solid var(--buttons-border);
-  padding: 0.2rem 1.2rem;
-  font-size: 1rem;
-  font-weight: 400;
-  font-family: inherit;
-  background-color: #7b87ba;
-  cursor: pointer;
-  transition: background-color 0.25s;
-}
-
-button:not(:disabled):hover {
-  border-color: var(--border-color);
-  background-color: rgb(165, 175, 221);
-}
-
-button:disabled {
-  border-color: #7b87ba;
-}
-
-a {
-  text-decoration: none;
 }
