refactor: refactor characters components and styles

--- a/src/components/CharacterDetails/CharacterDetails.module.css
+++ b/src/components/CharacterDetails/CharacterDetails.module.css
@@ -1,11 +1,11 @@
-:root {
+/* :root {
   --card-border: silver;
   --buttons-border: #e1e1e1;
   --text: #fff;
   --card-back-hover: #2e2525;
   --card-back: #353535;
   --backdrop: #070707;
-}
+} */
 
 .character_card,
 .character_card_light {
